chore: deployment ready

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,18 @@
-# MongoDB Connection String
+# Environment Variables Template
+# Copy this file to .env and update the values
+
+# Server Configuration
+PORT=4000
+NODE_ENV=production
+
+# Database Configuration (MongoDB Atlas)
 MONGODB_URI=mongodb+srv://username:password@cluster0.xxxxx.mongodb.net/studentdb?retryWrites=true&w=majority
 
-# Server Port
-PORT=4000
+# Client URL for CORS (production deployment)
+CLIENT_URL=https://your-frontend-app.onrender.com
 
-# Node Environment
-NODE_ENV=production
+# Development note: 
+# For local development, you can use:
+# NODE_ENV=development
+# MONGODB_URI=mongodb://localhost:27017/studentdb
+# CLIENT_URL=http://localhost:5173
