--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,10 @@
-# Production Environment Variables
+# Client Environment Variables Template
+# Copy this file to .env and update the values
+
+# API URL - Backend server URL
+# Production deployment on Render
 VITE_API_URL=https://your-backend-app-name.onrender.com
+
+# Development note:
+# For local development, use:
+# VITE_API_URL=http://localhost:4000
