--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
-  "keywords": ["express", "mongodb", "student", "registration"],
+  "keywords": ["express", "mongodb", "student", "registration", "render"],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
@@ -19,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mongoose": "^8.18.2",
+    "mongoose": "^8.18.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
